--- a/spells.html
+++ b/spells.html
@@ -77,10 +77,90 @@
 
         <div id="level2">
           <h2>Kúzla na leveli 2</h2>
+
+          <!-- tabuľka -->
+          <table style="width:100%">
+            <tr style="height:100px">
+              <th style="width:15%">Obrázok</th>
+              <th style="width:25%">Názov</th>
+              <th style="width:25%">Typ</th>
+              <th style="width:35%">Poškodenie</th>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/CloudofDaggers.jpg" alt="CloudofDaggers" width="100" style="border-radius:15px;"></td>
+              <td>Cloud of Daggers</td>
+              <td>Na diaľku</td>
+              <td>4d4 Sečné poškodenie každé kolo na 10 kôl</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/ScorchingRay.jpg" alt="ScorchingRay" width="100" style="border-radius:15px;"></td>
+              <td>Scorching Ray</td>
+              <td>Na diaľku</td>
+              <td>6d6 Ohňové poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/Shatter.jpg" alt="Shatter" width="100" style="border-radius:15px;"></td>
+              <td>Shatter</td>
+              <td>Na diaľku s oblasťou účinku 3m</td>
+              <td>3d8 Hromové poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/Melf'sAcidArrow.jpg" alt="Melf'sAcidArrow" width="100" style="border-radius:15px;"></td>
+              <td>Melf's Acid Arrow</td>
+              <td>Na diaľku</td>
+              <td>4d4 + 4d4 oneskorené Žieravé poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/ShadowBlade.jpg" alt="ShadowBlade" width="100" style="border-radius:15px;"></td>
+              <td>Shadow Blade</td>
+              <td>Blízky boj</td>
+              <td>2d8 Psychické poškodenie</td>
+            </tr>
+          </table>
         </div>
 
         <div id="level3">
           <h2>Kúzla na leveli 3</h2>
+
+          <!-- tabuľka -->
+          <table style="width:100%">
+            <tr style="height:100px">
+              <th style="width:15%">Obrázok</th>
+              <th style="width:25%">Názov</th>
+              <th style="width:25%">Typ</th>
+              <th style="width:35%">Poškodenie</th>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
+              <td>Burning hands</td>
+              <td>Blízky boj</td>
+              <td>3d6 Ohňové poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
+              <td>Ice knife</td>
+              <td>Na diaľku</td>
+              <td>1d10 Bodné poškodenie + 2d6 Chladné poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
+              <td>Witch bolt</td>
+              <td>Na diaľku</td>
+              <td>1d12 Bleskové poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
+              <td>Magic Missile</td>
+              <td>Na diaľku</td>
+              <td>3d4 + 3 Silove poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
+              <td>Ray of Sickness</td>
+              <td>Na diaľku</td>
+              <td>2d8 Jedovaté poškodenie</td>
+            </tr>
+          </table>
         </div>
 
         <div class="footer">
