--- a/spells.html
+++ b/spells.html
@@ -108,7 +108,7 @@
               <td><img src="images/spells/Melf'sAcidArrow.jpg" alt="Melf'sAcidArrow" width="100" style="border-radius:15px;"></td>
               <td>Melf's Acid Arrow</td>
               <td>Na diaľku</td>
-              <td>4d4 + 4d4 oneskorené Žieravé poškodenie</td>
+              <td>4d4 Žieravé poškodenie + 4d4 oneskorené Žieravé poškodenie</td>
             </tr>
             <tr style="height:100px">
               <td><img src="images/spells/ShadowBlade.jpg" alt="ShadowBlade" width="100" style="border-radius:15px;"></td>
