--- a/spells.html
+++ b/spells.html
@@ -101,14 +101,14 @@
             <tr style="height:100px">
               <td><img src="images/spells/Shatter.jpg" alt="Shatter" width="100" style="border-radius:15px;"></td>
               <td>Shatter</td>
-              <td>Na diaľku s oblasťou účinku 3m</td>
+              <td>Na diaľku s oblasťou účinku 3m (kruh)</td>
               <td>3d8 Hromové poškodenie</td>
             </tr>
             <tr style="height:100px">
               <td><img src="images/spells/Melf'sAcidArrow.jpg" alt="Melf'sAcidArrow" width="100" style="border-radius:15px;"></td>
               <td>Melf's Acid Arrow</td>
               <td>Na diaľku</td>
-              <td>4d4 Žieravé poškodenie + 4d4 oneskorené Žieravé poškodenie</td>
+              <td>4d4 Žieravé poškodenie + 4d4 oneskorené žieravé poškodenie</td>
             </tr>
             <tr style="height:100px">
               <td><img src="images/spells/ShadowBlade.jpg" alt="ShadowBlade" width="100" style="border-radius:15px;"></td>
@@ -131,34 +131,34 @@
               <th style="width:35%">Poškodenie</th>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
-              <td>Burning hands</td>
+              <td><img src="images/spells/Fireball.jpg" alt="Fireball" width="100" style="border-radius:15px;"></td>
+              <td>Fireball</td>
+              <td>Na diaľku s oblasťou účinku 4m (kruh)</td>
+              <td>8d6 Ohňové poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/GlyphofWarding.jpg" alt="GlyphofWarding" width="100" style="border-radius:15px;"></td>
+              <td>Glyph of Warding</td>
+              <td>Na diaľku s oblasťou účinku 4m (kruh)</td>
+              <td>5d8 Ohňové, Chladné, Bleskové, Žieravé, Jedovaté alebo Hromové poškodenie (možnosť výberu jedného)</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/LightningBolt.jpg" alt="LightningBolt" width="100" style="border-radius:15px;"></td>
+              <td>Lightning Bolt</td>
+              <td>Na diaľku s oblasťou účinku 30m (čiara)</td>
+              <td>8d6 Bleskové poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/VampiricTouch.jpg" alt="VampiricTouch" width="100" style="border-radius:15px;"></td>
+              <td>Vampiric Touch</td>
               <td>Blízky boj</td>
-              <td>3d6 Ohňové poškodenie</td>
+              <td>3d6 Nekrotické poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
-              <td>Ice knife</td>
-              <td>Na diaľku</td>
-              <td>1d10 Bodné poškodenie + 2d6 Chladné poškodenie</td>
-            </tr>
-            <tr style="height:100px">
-              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
-              <td>Witch bolt</td>
-              <td>Na diaľku</td>
-              <td>1d12 Bleskové poškodenie</td>
-            </tr>
-            <tr style="height:100px">
-              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
-              <td>Magic Missile</td>
-              <td>Na diaľku</td>
-              <td>3d4 + 3 Silove poškodenie</td>
-            </tr>
-            <tr style="height:100px">
-              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
-              <td>Ray of Sickness</td>
-              <td>Na diaľku</td>
-              <td>2d8 Jedovaté poškodenie</td>
+              <td><img src="images/spells/Counterspell.jpg" alt="Counterspell" width="100" style="border-radius:15px;"></td>
+              <td>Counterspell</td>
+              <td>Reakcia</td>
+              <td>Umožňuje kúzelníkom prerušiť hádzanie kúzla iného kúzelníka, čím kúzlo zlyhá a nemá žiadny účinok.</td>
             </tr>
           </table>
         </div>
