--- a/spells.html
+++ b/spells.html
@@ -140,7 +140,8 @@
               <td><img src="images/spells/GlyphofWarding.jpg" alt="GlyphofWarding" width="100" style="border-radius:15px;"></td>
               <td>Glyph of Warding</td>
               <td>Na diaľku s oblasťou účinku 4m (kruh)</td>
-              <td>5d8 Ohňové, Chladné, Bleskové, Žieravé, Jedovaté alebo Hromové poškodenie (možnosť výberu jedného)</td>
+              <td>5d8 Ohňové, Chladné, Bleskové, Žieravé, Jedovaté alebo Hromové poškodenie<br>
+                  (možnosť výberu jedného)</td>
             </tr>
             <tr style="height:100px">
               <td><img src="images/spells/LightningBolt.jpg" alt="LightningBolt" width="100" style="border-radius:15px;"></td>
