--- a/spells.html
+++ b/spells.html
@@ -164,6 +164,138 @@
           </table>
         </div>
 
+        <div id="level4">
+          <h2>Kúzla na leveli 4</h2>
+
+          <!-- tabuľka -->
+          <table style="width:100%">
+            <tr style="height:100px">
+              <th style="width:15%">Obrázok</th>
+              <th style="width:25%">Názov</th>
+              <th style="width:25%">Typ</th>
+              <th style="width:35%">Poškodenie</th>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/Blight.jpg" alt="Blight" width="100" style="border-radius:15px;"></td>
+              <td>Blight</td>
+              <td>Boj na diaľku</td>
+              <td>8d8 Nekrotické poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/IceStorm.jpg" alt="IceStorm" width="100" style="border-radius:15px;"></td>
+              <td>Ice Storm</td>
+              <td>Boj na diaľku s oblasťou účinku 6m (kruh)</td>
+              <td>2d8 Drvivé poškodenie + 4d6 Chladné poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/ConjureMinorElemental.jpg" alt="ConjureMinorElemental" width="100" style="border-radius:15px;"></td>
+              <td>Conjure Minor Elemental</td>
+              <td>Vyvolanie</td>
+              <td>Vyvolanie menšieho elementála ktorý bude bojovať po vašom boku</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/WallofFire.jpg" alt="WallofFire" width="100" style="border-radius:15px;"></td>
+              <td>Wall of Fire</td>
+              <td>Na diaľku s oblasťou účinku 36m (čiara)</td>
+              <td>5d8 Ohňové poškodenie</td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/PhantasmalKiller.jpg" alt="PhantasmalKiller" width="100" style="border-radius:15px;"></td>
+              <td>Phantasmal Killer</td>
+              <td>Na diaľku</td>
+              <td>4d10 Psychické poškodenie</td>
+            </tr>
+          </table>
+        </div>
+
+        <div id="level5">
+          <h2>Kúzla na leveli 5</h2>
+
+          <!-- tabuľka -->
+          <table style="width:100%">
+            <tr style="height:100px">
+              <th style="width:15%">Obrázok</th>
+              <th style="width:25%">Názov</th>
+              <th style="width:25%">Typ</th>
+              <th style="width:35%">Poškodenie</th>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </table>
+        </div>
+
+        <div id="level6">
+          <h2>Kúzla na leveli 6</h2>
+
+          <!-- tabuľka -->
+          <table style="width:100%">
+            <tr style="height:100px">
+              <th style="width:15%">Obrázok</th>
+              <th style="width:25%">Názov</th>
+              <th style="width:25%">Typ</th>
+              <th style="width:35%">Poškodenie</th>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr style="height:100px">
+              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </table>
+        </div>
+
         <div class="footer">
         <a href="https://www.facebook.com/dndbeyond" target="_blank" rel="noopener" aria-label="Facebook">
           <i class="fab fa-facebook-f"></i>
