--- a/spells.html
+++ b/spells.html
@@ -30,6 +30,9 @@
           <li><a href="#level1">Level 1</a></li>
           <li><a href="#level2">Level 2</a></li>
           <li><a href="#level3">Level 3</a></li>
+          <li><a href="#level4">Level 4</a></li>
+          <li><a href="#level5">Level 5</a></li>
+          <li><a href="#level6">Level 6</a></li>
         </ul>
 
         <div id="level1">
@@ -45,7 +48,7 @@
             <tr style="height:100px">
               <td><img src="images/spells/BurningHands.jpg" alt="BurningHands" width="100" style="border-radius:15px;"></td>
               <td>Burning hands</td>
-              <td>Blízky boj</td>
+              <td>Blízky boj s oblasťou účinku 9m (kužeľ)</td>
               <td>3d6 Ohňové poškodenie</td>
             </tr>
             <tr style="height:100px">
@@ -196,13 +199,13 @@
             <tr style="height:100px">
               <td><img src="images/spells/WallofFire.jpg" alt="WallofFire" width="100" style="border-radius:15px;"></td>
               <td>Wall of Fire</td>
-              <td>Na diaľku s oblasťou účinku 36m (čiara)</td>
+              <td>Boj na diaľku s oblasťou účinku 36m (čiara)</td>
               <td>5d8 Ohňové poškodenie</td>
             </tr>
             <tr style="height:100px">
               <td><img src="images/spells/PhantasmalKiller.jpg" alt="PhantasmalKiller" width="100" style="border-radius:15px;"></td>
               <td>Phantasmal Killer</td>
-              <td>Na diaľku</td>
+              <td>Boj na diaľku</td>
               <td>4d10 Psychické poškodenie</td>
             </tr>
           </table>
@@ -220,34 +223,35 @@
               <th style="width:35%">Poškodenie</th>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><img src="images/spells/ConeofCold.jpg" alt="ConeofCold" width="100" style="border-radius:15px;"></td>
+              <td>Cone of Cold</td>
+              <td>Blízky boj s oblasťou účinku 9m (kužeľ)</td>
+              <td>8d8 Chladné poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><img src="images/spells/Cloudkill.jpg" alt="Cloudkill" width="100" style="border-radius:15px;"></td>
+              <td>Cloudkill</td>
+              <td>Boj na diaľku s oblasťou účinku 6m (kruh)</td>
+              <td>5d8 Jedovaté poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><img src="images/spells/HoldMonster.jpg" alt="HoldMonster" width="100" style="border-radius:15px;"></td>
+              <td>Hold Monster</td>
+              <td>Akcia</td>
+              <td>Umožňuje kúzelníkovi paralyzovať príšeru, čím jej zabráni konať.<br>
+                  Spraví ho zraniteľným voči útokom.</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><img src="images/spells/ConjureElemental.jpg" alt="ConjureElemental" width="100" style="border-radius:15px;"></td>
+              <td>Conjure Elemental</td>
+              <td>Vyvolanie</td>
+              <td>Umožňuje kúzelníkovi privolať ohňového, zemného, vodného alebo vzdušného elementála.</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><img src="images/spells/Telekinesis.jpg" alt="Telekinesis" width="100" style="border-radius:15px;"></td>
+              <td>Telekinesis</td>
+              <td>Akcia</td>
+              <td>Umožňuje kúzelníkovi házať tvory a predmety len silou mysle.</td>
             </tr>
           </table>
         </div>
