--- a/spells.html
+++ b/spells.html
@@ -268,34 +268,37 @@
               <th style="width:35%">Poškodenie</th>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><img src="images/spells/Chain Lightning.jpg" alt="Chain Lightning" width="100" style="border-radius:15px;"></td>
+              <td>Chain Lightning</td>
+              <td>Boj na diaľku 1 primárny cieľ a 3 nepriatelia v okruhu 18 m</td>
+              <td>10d8 Bleskové poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><img src="images/spells/Disintegrate.jpg" alt="Disintegrate" width="100" style="border-radius:15px;"></td>
+              <td>Disintegrate</td>
+              <td>Boj na diaľku</td>
+              <td>10d6 + 40 Silove poškodenie<br>
+                  Záchranný hod DEX (DC kúzla) (pri úspechu: poškodenie sa neaplikuje)</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><img src="images/spells/Sunbeam.jpg" alt="Sunbeam" width="100" style="border-radius:15px;"></td>
+              <td>Sunbeam</td>
+              <td>Boj na diaľku s oblasťou účinku 18m (čiara)</td>
+              <td>6d8 Žiariace poškodenie<br>
+                  Záchranný hod CON (pri úspechu: ciele stále utrpia polovicu poškodenia)</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><img src="images/spells/CircleofDeath.jpg" alt="CircleofDeath" width="100" style="border-radius:15px;"></td>
+              <td>Circle of Death</td>
+              <td>Boj na diaľku s oblasťou účinku 9m (kruh)<br>
+                  Záchranný hod CON (pri úspechu: ciele stále utrpia polovicu poškodenia)</td>
+              <td>8d6 Nekrotické poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/.jpg" alt="" width="100" style="border-radius:15px;"></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td><img src="images/spells/GlobeofInvulnerability.jpg" alt="GlobeofInvulnerability" width="100" style="border-radius:15px;"></td>
+              <td>Globe of Invulnerability</td>
+              <td>Akcia</td>
+              <td>Vytvorenie bariery, ktorá robí tvory a predmety vo vnútri odolnými voči všetkému poškodeniu.</td>
             </tr>
           </table>
         </div>
