--- a/spells.html
+++ b/spells.html
@@ -268,7 +268,7 @@
               <th style="width:35%">Poškodenie</th>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/Chain Lightning.jpg" alt="Chain Lightning" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/ChainLightning.jpg" alt="ChainLightning" width="100" style="border-radius:15px;"></td>
               <td>Chain Lightning</td>
               <td>Boj na diaľku 1 primárny cieľ a 3 nepriatelia v okruhu 18 m</td>
               <td>10d8 Bleskové poškodenie</td>
