--- a/weapons.html
+++ b/weapons.html
@@ -35,21 +35,77 @@
             <th style="width:20%">Poškodenie</th>
           </tr>
           <tr style="height:100px">
-            <td>Meč</td>
+            <td>Krátky meč</td>
             <td>Blízky boj</td>
-            <td>1d8</td>
+            <td>1d6 Bodné poškodenie</td>
           </tr>
           <tr style="height:100px">
-            <td>Luk</td>
+            <td>Dlhý meč</td>
+            <td>Blízky boj</td>
+            <td>1d8 Sečné poškodenie</td>
+          </tr>
+          <tr style="height:100px">
+            <td>Veľký meč (Greatsword)</td>
+            <td>Blízky boj</td>
+            <td>2d6 Sečné poškodenie</td>
+          </tr>
+          <tr style="height:100px">
+            <td>Sekera (Handaxe)</td>
+            <td>Blízky boj / Hodenie</td>
+            <td>1d6 Sečné poškodenie</td>
+          </tr>
+          <tr style="height:100px">
+            <td>Sekera bojová (Battleaxe)</td>
+            <td>Blízky boj</td>
+            <td>1d8 Sečné poškodenie</td>
+          </tr>
+          <tr style="height:100px">
+            <td>Palica / Kyj (Club)</td>
+            <td>Blízky boj</td>
+            <td>1d4 Drvivé poškodenie</td>
+          </tr>
+          <tr style="height:100px">
+            <td>Kladivo bojové (Warhammer)</td>
+            <td>Blízky boj</td>
+            <td>1d8 Drvivé poškodenie</td>
+          </tr>
+          <tr style="height:100px">
+            <td>Dýka (Dagger)</td>
+            <td>Blízky boj / Hodenie</td>
+            <td>1d4 Bodné poškodenie</td>
+          </tr>
+          <tr style="height:100px">
+            <td>Kopija (Spear)</td>
+            <td>Blízky boj / Hodenie</td>
+            <td>1d6 Bodné poškodenie</td>
+          </tr>
+          <tr style="height:100px">
+            <td>Luk dlhý (Longbow)</td>
             <td>Na diaľku</td>
-            <td>1d6</td>
+            <td>1d8 Bodné poškodenie</td>
           </tr>
           <tr style="height:100px">
-            <td>Sekera</td>
+            <td>Luk krátky (Shortbow)</td>
+            <td>Na diaľku</td>
+            <td>1d6 Bodné poškodenie</td>
+          </tr>
+          <tr style="height:100px">
+            <td>Kuša ľahká (Light crossbow)</td>
+            <td>Na diaľku</td>
+            <td>1d8 Bodné poškodenie</td>
+          </tr>
+          <tr style="height:100px">
+            <td>Kuša ťažká (Heavy crossbow)</td>
+            <td>Na diaľku</td>
+            <td>1d10 Bodné poškodenie</td>
+          </tr>
+          <tr style="height:100px">
+            <td>Pazúry / drápy (Claws)</td>
             <td>Blízky boj</td>
-            <td>1d10</td>
+            <td>1d4 Sečné poškodenie</td>
           </tr>
         </table>
+
 
         <div class="footer">
         <a href="https://www.facebook.com/dndbeyond" target="_blank" rel="noopener" aria-label="Facebook">
