--- a/weapons.html
+++ b/weapons.html
@@ -106,6 +106,80 @@
           </tr>
         </table>
 
+        <h3>Typy poškodenia</h3> 
+          <table style="width:100%">
+            <tr>
+              <th>Typ poškodenia (EN)</th>
+              <th>Slovenský preklad</th>
+              <th>Popis / Príklad</th>
+            </tr>
+            <tr class="physical">
+              <td>Bludgeoning</td>
+              <td>Drvivé poškodenie</td>
+              <td>od tupých zbraní: kladivo, palica, pád kameňa</td>
+            </tr>
+            <tr class="physical">
+              <td>Piercing</td>
+              <td>Bodné poškodenie</td>
+              <td>od kopije, šípu, dýky</td>
+            </tr>
+            <tr class="physical">
+              <td>Slashing</td>
+              <td>Sečné poškodenie</td>
+              <td>od meča, sekery, pazúrov</td>
+            </tr>
+            <tr class="elemental">
+              <td>Fire</td>
+              <td>Ohňové poškodenie</td>
+              <td>-</td>
+            </tr>
+            <tr class="elemental">
+              <td>Cold</td>
+              <td>Chladné poškodenie</td>
+              <td>-</td>
+            </tr>
+            <tr class="elemental">
+              <td>Lightning</td>
+              <td>Bleskové poškodenie</td>
+              <td>-</td>
+            </tr>
+            <tr class="elemental">
+              <td>Thunder</td>
+              <td>Hromové poškodenie</td>
+              <td>hluková vlna, sonický výbuch</td>
+            </tr>
+            <tr class="elemental">
+              <td>Acid</td>
+              <td>Žieravé poškodenie</td>
+              <td>kyseliny, toxické látky</td>
+            </tr>
+            <tr class="elemental">
+              <td>Poison</td>
+              <td>Otrava / Jedovaté poškodenie</td>
+              <td>-</td>
+            </tr>
+            <tr class="magical">
+              <td>Necrotic</td>
+              <td>Nekrotické poškodenie</td>
+              <td>energia smrti, vysávanie životnej sily</td>
+            </tr>
+            <tr class="magical">
+              <td>Radiant</td>
+              <td>Žiariace poškodenie</td>
+              <td>svetlo, posvätná energia</td>
+            </tr>
+            <tr class="magical">
+              <td>Psychic</td>
+              <td>Psychické poškodenie</td>
+              <td>útok na myseľ, ilúzie, telepatické údery</td>
+            </tr>
+            <tr class="magical">
+              <td>Force</td>
+              <td>Sílové poškodenie</td>
+              <td>čistá magická energia (napr. Magic Missile)</td>
+            </tr>
+          </table>
+
 
         <div class="footer">
         <a href="https://www.facebook.com/dndbeyond" target="_blank" rel="noopener" aria-label="Facebook">
