Update and rename form.html to info.html

--- a/info.html
+++ b/info.html
@@ -17,7 +17,7 @@
         <li><a href="classes.html">Triedy</a></li>
         <li><a href="weapons.html">Zbrane</a></li>
         <li><a href="spells.html">Kúzla</a></li>
-        <li><a href="form.html">Kontakt</a></li>
+        <li><a href="info.html">Kontakt</a></li>
       </ul>
     </nav>
   </header>
