--- a/info.html
+++ b/info.html
@@ -31,7 +31,7 @@
           Slúži výhradne na študijné a nekomerčné účely. Väčšina informácií bola čerpaná z oficiálnych
           materiálov a databázy <a href="https://www.dndbeyond.com" target="_blank" rel="noopener">D&amp;D Beyond</a>,
           ako aj z rôznych komunitných fór a zdrojov fanúšikov. Zdrojový kód projektu je dostupný na
-          <a href="https://github.com/DePolarBear/dndwebpage" target="_blank" rel="noopener">GitHub</a>.
+          <a href="https://github.com/DePolarBear/dndwebpage" target="_blank" rel="noopener">GitHub</a>.<br>
           Stránka nemá ziskový charakter a jej cieľom je spracovanie, analýza a prezentácia poznatkov v rámci
           študentského projektu.
         </p>
@@ -44,10 +44,12 @@
           It is intended solely for educational and non-profit purposes. Most of the information was drawn from
           official materials and the <a href="https://www.dndbeyond.com" target="_blank" rel="noopener">D&amp;D Beyond</a>
           database, as well as various community forums and fan-based sources. The source code is available on
-          <a href="https://github.com/DePolarBear/dndwebpage" target="_blank" rel="noopener">GitHub</a>.
+          <a href="https://github.com/DePolarBear/dndwebpage" target="_blank" rel="noopener">GitHub</a>.<br>
           This project is non-commercial and its purpose is to collect, analyze, and present information within
           the scope of a student assignment.
         </p>
+
+        <hr>
         
         <h2 id="top">Kontaktný formulár</h2>
         <a href="#form">Skoč na formulár</a>
