--- a/info.html
+++ b/info.html
@@ -29,9 +29,9 @@
         <p>
           Táto stránka vznikla ako súčasť semestrálnej práce na predmet <em>Informačné systémy</em>.
           Slúži výhradne na študijné a nekomerčné účely. Väčšina informácií bola čerpaná z oficiálnych
-          materiálov a databázy <a href="https://www.dndbeyond.com" target="_blank" rel="noopener">D&amp;D Beyond</a>,
+          materiálov a databázy <strong><a href="https://www.dndbeyond.com" target="_blank" rel="noopener">D&amp;D Beyond</a></strong>,
           ako aj z rôznych komunitných fór a zdrojov fanúšikov. Zdrojový kód projektu je dostupný na
-          <a href="https://github.com/DePolarBear/dndwebpage" target="_blank" rel="noopener">GitHub</a>.<br>
+          <strong><a href="https://github.com/DePolarBear/dndwebpage" target="_blank" rel="noopener">GitHub</a></strong>.<br>
           Stránka nemá ziskový charakter a jej cieľom je spracovanie, analýza a prezentácia poznatkov v rámci
           študentského projektu.
         </p>
@@ -42,9 +42,9 @@
         <p>
           This website was created as part of a semester project for the course <em>Information Systems</em>.
           It is intended solely for educational and non-profit purposes. Most of the information was drawn from
-          official materials and the <a href="https://www.dndbeyond.com" target="_blank" rel="noopener">D&amp;D Beyond</a>
+          official materials and the <strong><a href="https://www.dndbeyond.com" target="_blank" rel="noopener">D&amp;D Beyond</a></strong>
           database, as well as various community forums and fan-based sources. The source code is available on
-          <a href="https://github.com/DePolarBear/dndwebpage" target="_blank" rel="noopener">GitHub</a>.<br>
+          <strong><a href="https://github.com/DePolarBear/dndwebpage" target="_blank" rel="noopener">GitHub</a></strong>.<br>
           This project is non-commercial and its purpose is to collect, analyze, and present information within
           the scope of a student assignment.
         </p>
