--- a/info.html
+++ b/info.html
@@ -57,10 +57,14 @@
 
         <h2>Základná príručka na hranie D&D</h2>
           <p>
-            Táto stránka obsahuje aj základnú príručku pre nových hráčov Dungeons & Dragons. 
+            Táto stránka obsahuje aj základnú príručku pre nových hráčov Dungeons & Dragons.<br>
             Dokument je dostupný vo formáte PDF a môžete si ho stiahnuť kliknutím na tlačidlo nižšie:
           </p>
           <a href="files/prirucka.pdf" download class="download-btn">📄 Stiahnuť PDF príručku</a>
+          <br>
+          <p>
+            Alebo si ho vieš otvoriť na webe:
+          </p>
               
         <h2 id="top">Kontaktný formulár</h2>
   
