--- a/info.html
+++ b/info.html
@@ -60,7 +60,7 @@
             Táto stránka obsahuje aj základnú príručku pre nových hráčov Dungeons & Dragons.<br>
             Dokument je dostupný vo formáte PDF a môžete si ho stiahnuť kliknutím na tlačidlo nižšie:
           </p>
-          <a href="files/prirucka.pdf" download class="download-btn">📄 Stiahnuť PDF príručku</a>
+          <a href="files/DnD_BasicRules_2018.pdf" download class="download-btn">📄 Stiahnuť PDF príručku</a>
           <br>
           <p>
             Alebo si ho vieš otvoriť na webe:
