--- a/info.html
+++ b/info.html
@@ -65,6 +65,7 @@
           <p>
             Alebo si ho vieš otvoriť na webe:
           </p>
+          <a href="https://media.wizards.com/2018/dnd/downloads/DnD_BasicRules_2018.pdf" target="_blank" rel="noopener">Otvoriť PDF</a>
               
         <h2 id="top">Kontaktný formulár</h2>
   
