--- a/info.html
+++ b/info.html
@@ -65,7 +65,11 @@
           <p>
             Alebo si ho vieš otvoriť na webe:
           </p>
-          <a href="https://media.wizards.com/2018/dnd/downloads/DnD_BasicRules_2018.pdf" target="_blank" rel="noopener">Otvoriť PDF</a>
+          <a href="https://media.wizards.com/2018/dnd/downloads/DnD_BasicRules_2018.pdf">📄 Otvoriť PDF</a>
+          <br>
+          <br>
+          <hr>
+          <br>
               
         <h2 id="top">Kontaktný formulár</h2>
   
