--- a/info.html
+++ b/info.html
@@ -70,7 +70,16 @@
           <br>
           <hr>
           <br>
-              
+
+        <h2>Kontakt</h2>h2>
+        <p>
+          V prípade akýchkolvek otázok ma neváhajte kontaktovať na mail:
+        </p>
+        <a href="mailto:ranusa@stud.uniza.sk" class="download-btn">✉️ Kontaktujte ma</a>
+        <br>
+        <p>
+          Alebo pomocou nášho formulára:
+        </p>
         <h2 id="top">Kontaktný formulár</h2>
   
         <p>Máš otázku? Napíš nám!</p>
