--- a/info.html
+++ b/info.html
@@ -65,13 +65,13 @@
           <p>
             Alebo si ho vieš otvoriť na webe:
           </p>
-          <a href="https://media.wizards.com/2018/dnd/downloads/DnD_BasicRules_2018.pdf">📄 Otvoriť PDF</a>
+          <a href="https://media.wizards.com/2018/dnd/downloads/DnD_BasicRules_2018.pdf" download class="download-btn">📄 Otvoriť PDF</a>
           <br>
           <br>
           <hr>
           <br>
 
-        <h2>Kontakt</h2>h2>
+        <h2>Kontakt</h2>
         <p>
           V prípade akýchkolvek otázok ma neváhajte kontaktovať na mail:
         </p>
@@ -80,7 +80,7 @@
         <p>
           Alebo pomocou nášho formulára:
         </p>
-        <h2 id="top">Kontaktný formulár</h2>
+        <h4 id="top">Kontaktný formulár</h4>
   
         <p>Máš otázku? Napíš nám!</p>
   
