--- a/info.html
+++ b/info.html
@@ -77,7 +77,7 @@
         <p>
           V prípade akýchkolvek otázok ma neváhajte kontaktovať na mail:
         </p>
-        <a href="mailto:ranusa@stud.uniza.sk" class="download-btn">✉️ Kontaktujte ma</a>
+        <a href="mailto:ranusa@stud.uniza.sk?subject=Otázka%20k%20semestrálnej%20práci" class="download-btn">✉️ Kontaktujte ma</a>
         <br>
         <br>
         <br>
