--- a/info.html
+++ b/info.html
@@ -9,6 +9,7 @@
 <body>
 
   <header>
+    <h1>Informácie o stránke a projekte</h1>
     <nav>
       <ul>
         <li><a href="index.html">Domov</a></li>
