--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
       <br>
       <br>
 
-      <iframe 
-        src="https://www.youtube.com/embed/2R1p2RSQz1o?start=988&autoplay=1&mute=0&controls=1" 
-        title="YouTube video" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen>
-      </iframe>
+      <div class="video-container">
+        <iframe 
+          src="https://www.youtube.com/embed/2R1p2RSQz1o?start=988&autoplay=1&mute=0&controls=1" 
+          title="YouTube video" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen>
+        </iframe>
+      </div>
 
       <div class="footer">
         <a href="https://www.facebook.com/dndbeyond" target="_blank" rel="noopener" aria-label="Facebook">
