--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <div class="video-container">
         <iframe 
-          src="https://www.youtube.com/shorts/bnuDk0z2M74?start=988&autoplay=1&mute=1&controls=1" 
+          src="https://www.youtube.com/embed/bnuDk0z2M74?start=988&autoplay=1&mute=1&controls=1" 
           title="YouTube video" 
           frameborder="0" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
