--- a/index.html
+++ b/index.html
@@ -54,14 +54,16 @@
       <br>
       <br>
 
-      <div class="video-container">
-        <iframe 
-          src="https://www.youtube.com/embed/bnuDk0z2M74?start=988&autoplay=1&mute=1&controls=1&loop=1&playlist=bnuDk0z2M74" 
-          title="YouTube video" 
-          frameborder="0" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-          allowfullscreen>
-        </iframe>
+      <div class="center">
+        <div class="video-container">
+          <iframe 
+            src="https://www.youtube.com/embed/bnuDk0z2M74?start=988&autoplay=1&mute=1&controls=1&loop=1&playlist=bnuDk0z2M74" 
+            title="YouTube video" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+          </iframe>
+        </div>
       </div>
 
       <div class="footer">
