--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       
         <div class="video-container">
           <iframe 
-            src="https://www.youtube.com/watch?v=0s9IKjFOc9g?start=988&autoplay=1&mute=1&controls=1&loop=1&playlist=bnuDk0z2M74" 
+            src="https://www.youtube.com/embed/v=0s9IKjFOc9g?start=1094&autoplay=1&mute=1&controls=1&loop=1&playlist=v=0s9IKjFOc9g" 
             title="YouTube video" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -79,7 +79,7 @@
       
         <div class="video-container">
           <iframe 
-            src="https://www.youtube.com/embed/bnuDk0z2M74?start=988&autoplay=1&mute=1&controls=1&loop=1&playlist=bnuDk0z2M74" 
+            src="https://www.youtube.com/embed/bnuDk0z2M74?autoplay=1&mute=1&controls=1&loop=1&playlist=bnuDk0z2M74" 
             title="YouTube video" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
