--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>D&D Úvod</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="shortcut icon" href="images/icon.png" />
 </head>
 <body>
 
