--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>D&D Úvod</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="shortcut icon" href="images/logo.png" />
+  <link rel="shortcut icon" href="images/dndlogod20.png" />
 </head>
 <body>
 
